# pg_cdc

./: Cargo.toml  docker-compose.yaml  readme.md
src/: config.rs  main.rs  threadpool.rs
src/nats/: mod.rs
src/postgres/: client.rs  field.rs  manager.rs  mapper.rs  mod.rs  publication.rs  replication.rs  replication_slot.rs  schema.rs  sorter.rs  table_filter.rs  types.rs  util.rs  validate.rs
