[package]
name = "pg_cdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
prost = "0.12.3"
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", features = [
    "runtime",
] }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres" }
postgres-types = { git = "https://github.com/MaterializeInc/rust-postgres" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rust_decimal = "1.33.1"
ordered-float = { version = "4.2.0", features = ["serde"] }
ijson = "0.1.3"
chrono = { version = "0.4.32", features = ["serde"] }
geo = { version = "0.27.0", features = ["use-serde"] }
thiserror = "1.0.56"
serde_json = "1.0.111"
serde = "1.0.195"
async-nats = "0.33.0"
rayon = "1.8.1"

[build-dependencies]
prost-build = "0.12.3"
